# ROS

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/client_server/: mult.h  multRequest.h  multResponse.h
devel/include/perception_stack_pkg/: BoundingBox.h  DetectionList.h  HumanReadableObject.h  OpticalFlow.h
devel/lib/client_server/: client.py  server.py
devel/lib/pkgconfig/: client_server.pc  perception_stack_pkg.pc  try1_pkg.pc
devel/lib/python3/dist-packages/client_server/srv/: __init__.py  _mult.py
devel/lib/python3/dist-packages/perception_stack_pkg/msg/: _BoundingBox.py  _DetectionList.py  _HumanReadableObject.py  _OpticalFlow.py  __init__.py
devel/share/client_server/cmake/: client_server-msg-extras.cmake  client_server-msg-paths.cmake  client_serverConfig.cmake
devel/share/perception_stack_pkg/cmake/: perception_stack_pkg-msg-extras.cmake  perception_stack_pkg-msg-paths.cmake  perception_stack_pkgConfig.cmake
devel/share/roseus/ros/client_server/: manifest.l
devel/share/roseus/ros/perception_stack_pkg/: manifest.l
devel/share/try1_pkg/cmake/: try1_pkgConfig.cmake
src/client_server/: CMakeLists.txt
src/perception_stack_pkg/: CMakeLists.txt  package.xml
src/perception_stack_pkg/msg/: BoundingBox.msg  DetectionList.msg  HumanReadableObject.msg  OpticalFlow.msg
src/perception_stack_pkg/scripts/: THE_FINAL_BOSS.py  camera_streamer.py  depth_estimation.py  object_detector_2d.py  optical_flow.py  semantic_segmentation.py
src/try1_pkg/: CMakeLists.txt
src/try1_pkg/scripts/: publisher.py  subscriber.py
(+26 files in other folders)
